--- a/src/main/resources/Learning/free-minimal-html5-css3-calendar-widget/index.html
+++ b/src/main/resources/Learning/free-minimal-html5-css3-calendar-widget/index.html
@@ -7,8 +7,8 @@ License URL: https://www.designmaz.net/licence/
 <html>
 	<head>
 		<title>Free Minimal HTML5 CSS3 Calendar Widget | Designmaz</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta name="viewport" caption="width=device-width, initial-scale=1, maximum-scale=1">
+		<meta http-equiv="Content-Type" caption="text/html; charset=utf-8" />
 		<link rel="stylesheet" href="css/style.css" type="text/css">
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:400,300,600,700' rel='stylesheet' type='text/css'>
 		<!----Calender -------->
@@ -27,7 +27,7 @@ License URL: https://www.designmaz.net/licence/
 
 	</head>
 	<body>
-		<div class="content">
+		<div class="caption">
 		
 			<div class="cal1"> </div>
 		</div>
